tests/snapshots/run_wpt_conformance__coreml_reduceLogSum_float16_1D_constant_tensor_all_non-negative_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_log_sum.https.any.js reduceLogSum float16 1D constant tensor all non-negative default options, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983314687_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([9, 84, 30, 86, 162, 78, 253, 84, 77, 82, 74, 75, 55, 77, 14, 80, 15, 84, 121, 84, 146, 73, 227, 82, 121, 81, 234, 74, 22, 86, 112, 80, 137, 82, 45, 85, 73, 72, 171, 58, 84, 84, 181, 67, 105, 84, 128, 84]);
  }

  nodes {
    [reduceLogSumOutput] = reduceLogSum(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceLogSumOutput; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983314687_0.mlmodelc/model.mil:6:12: Storage Reader expects file format version 2..
