tests/snapshots/run_wpt_conformance__coreml_reduceLogSum_float16_5D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_log_sum.https.any.js reduceLogSum float16 5D tensor default options, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'reduceLogSumInput' must be of rank 4, instead got a multi-array value of rank 5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceLogSumInput: f16[2, 1, 4, 1, 3];
  }

  nodes {
    [reduceLogSumOutput] = reduceLogSum(reduceLogSumInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceLogSumOutput; }
}
